--- a/po/da/kdeconnect-kded.po
+++ b/po/da/kdeconnect-kded.po
@@ -1,13 +1,13 @@
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Martin Schlander <mschlander@opensuse.org>, 2013.
+# Martin Schlander <mschlander@opensuse.org>, 2013, 2014.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2014-02-17 02:14+0000\n"
-"PO-Revision-Date: 2013-11-30 20:15+0100\n"
+"POT-Creation-Date: 2014-03-05 01:52+0000\n"
+"PO-Revision-Date: 2014-03-05 19:27+0100\n"
 "Last-Translator: Martin Schlander <mschlander@opensuse.org>\n"
 "Language-Team: Danish <kde-i18n-doc@kde.org>\n"
 "Language: da\n"
@@ -19,11 +19,11 @@ msgstr ""
 
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr ""
+msgstr "Martin Schlander"
 
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr ""
+msgstr "mschlander@opensuse.org"
 
 #: device.cpp:139
 msgid "Already paired"
@@ -41,48 +41,69 @@ msgstr "Enheden kan ikke nås"
 msgid "Error contacting device"
 msgstr "Fejl ved kontakt til enhed"
 
-#: device.cpp:196
+#: device.cpp:199
 msgid "Timed out"
 msgstr "Tidsudløb"
 
-#: device.cpp:295 device.cpp:347
+#: device.cpp:298 device.cpp:350
 msgid "Canceled by other peer"
 msgstr "Annulleret af modpart"
 
-#: device.cpp:311
+#: device.cpp:314
 msgid "Received incorrect key"
 msgstr "Modtog forkert nøgle"
 
-#: device.cpp:328
+#: device.cpp:331
 #, kde-format
 msgid "Pairing request from %1"
 msgstr "Parringsanmodning fra %1"
 
-#: device.cpp:329
+#: device.cpp:332
 msgid "Accept"
 msgstr "Acceptér"
 
-#: device.cpp:329
+#: device.cpp:332
 msgid "Reject"
 msgstr "Afvis"
 
-#: device.cpp:388
+#: device.cpp:391
 msgid "Canceled by the user"
 msgstr "Annulleret af brugeren"
 
-#: filetransferjob.cpp:107
+#: filetransferjob.cpp:41
+msgctxt "Device name that will appear on the jobs"
+msgid "KDE-Connect"
+msgstr "KDE-Connect"
+
+#: filetransferjob.cpp:60 filetransferjob.cpp:121
+msgid "Receiving file over KDE-Connect"
+msgstr "Modtagelse af fil over KDE-Connect"
+
+#: filetransferjob.cpp:61 filetransferjob.cpp:122
+msgctxt "File transfer origin"
+msgid "From"
+msgstr "Fra"
+
+#: filetransferjob.cpp:68
+msgid "Incoming file exists"
+msgstr "Indkommende fil findes"
+
+#: filetransferjob.cpp:124
+msgctxt "File transfer destination"
+msgid "To"
+msgstr "Til"
+
+#: filetransferjob.cpp:197
 msgid "Received incomplete file"
 msgstr "Modtog ukomplet fil"
 
 #: kdeconnectd.cpp:63
 msgid "kdeconnect"
-msgstr ""
+msgstr "kdeconnect"
 
 #: kdeconnectd.cpp:65
-#, fuzzy
-#| msgid "Error contacting device"
 msgid "connect devices"
-msgstr "Fejl ved kontakt til enhed"
+msgstr "forbind enheder"
 
 #: plugins/battery/batteryplugin.cpp:77
 #, kde-format
@@ -118,7 +139,7 @@ msgstr "Sæt kun på pause når der tales"
 #. i18n: ectx: property (text), widget (QCheckBox, check_mute)
 #: plugins/pausemusic/pausemusic_config.ui:65
 msgid "Mute system instead of pause"
-msgstr ""
+msgstr "Sæt systemet på lydløs i stedet for pause"
 
 #: plugins/ping/pingplugin.cpp:49
 msgid "Ping!"
@@ -126,15 +147,15 @@ msgstr "Ping!"
 
 #: plugins/sftp/mounter.cpp:172
 msgid "Failed to start sshfs"
-msgstr ""
+msgstr "kunne ikke starte sshfs"
 
 #: plugins/sftp/mounter.cpp:194
 msgid "Error when accessing to filesystem"
-msgstr ""
+msgstr "Fejl ved tilgang til filsystemet"
 
 #: plugins/sftp/mounter.cpp:205
 msgid "Failed to mount filesystem: device not responding"
-msgstr ""
+msgstr "Kunne ikke montere filsystemet: Enheden svarer ikke"
 
 #. i18n: ectx: property (windowTitle), widget (QWidget, ShareConfigUi)
 #. i18n: ectx: property (windowTitle), widget (QWidget, SftpConfigUi)
@@ -145,49 +166,47 @@ msgstr "Indstilling af deling-plugin"
 #. i18n: ectx: property (text), widget (QCheckBox, idle)
 #: plugins/sftp/sftp_config.ui:49
 msgid "Disconnect when idle"
-msgstr ""
+msgstr "Afbryd forbindelse når inaktiv"
 
 #. i18n: ectx: property (title), widget (QGroupBox, error)
 #: plugins/sftp/sftp_config.ui:59
 msgid "Error"
-msgstr ""
+msgstr "Fejl"
 
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: plugins/sftp/sftp_config.ui:81
 msgid "sshfsf not found in PATH"
-msgstr ""
+msgstr "sshfsf ikke fundet i PATH"
 
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: plugins/sftp/sftp_config.ui:113
 msgid "Mountpoint:"
-msgstr ""
+msgstr "Monteringspunkt:"
 
 #. i18n: ectx: property (text), widget (QLabel, label_2)
 #: plugins/sftp/sftp_config.ui:144
-#, fuzzy
-#| msgid "Timed out"
 msgid "Timeout:"
-msgstr "Tidsudløb"
+msgstr "Tidsudløb:"
 
 #. i18n: ectx: property (suffix), widget (QSpinBox, timeout)
 #: plugins/sftp/sftp_config.ui:160
 msgid " min"
-msgstr ""
+msgstr " min"
 
-#: plugins/sftp/sftpplugin.cpp:170 plugins/sftp/sftpplugin.cpp:191
-#: plugins/sftp/sftpplugin.cpp:216
+#: plugins/sftp/sftpplugin.cpp:168 plugins/sftp/sftpplugin.cpp:189
+#: plugins/sftp/sftpplugin.cpp:214
 #, kde-format
 msgid "Device %1"
-msgstr ""
+msgstr "Enhed %1"
 
-#: plugins/sftp/sftpplugin.cpp:171
+#: plugins/sftp/sftpplugin.cpp:169
 #, kde-format
 msgid "Filesystem mounted at %1"
-msgstr ""
+msgstr "Filsystem monteret i %1"
 
-#: plugins/sftp/sftpplugin.cpp:192
+#: plugins/sftp/sftpplugin.cpp:190
 msgid "Filesystem unmounted"
-msgstr ""
+msgstr "Filsystem afmonteret"
 
 #. i18n: ectx: property (title), widget (QGroupBox, groupBox)
 #: plugins/share/share_config.ui:23
@@ -199,11 +218,11 @@ msgstr "Modtager"
 msgid "Save files in:"
 msgstr "Gem filer i:"
 
-#: plugins/share/shareplugin.cpp:132
+#: plugins/share/shareplugin.cpp:135
 msgid "Transfer finished"
 msgstr "Overførsel gennemført"
 
-#: plugins/share/shareplugin.cpp:134
+#: plugins/share/shareplugin.cpp:137
 msgid "Open destination folder"
 msgstr "Åbn destinationsmappe"
 
