--- a/po/fi/plasma_applet_kdeconnect.po
+++ b/po/fi/plasma_applet_kdeconnect.po
@@ -1,14 +1,14 @@
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
 # Tommi Nieminen <translator@legisign.org>, 2013.
-# Lasse Liehu <lasse.liehu@gmail.com>, 2013.
+# Lasse Liehu <lasse.liehu@gmail.com>, 2013, 2014.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2014-02-17 02:14+0000\n"
-"PO-Revision-Date: 2013-11-16 19:04+0200\n"
+"POT-Creation-Date: 2014-03-01 01:46+0000\n"
+"PO-Revision-Date: 2014-02-22 19:21+0200\n"
 "Last-Translator: Lasse Liehu <lasse.liehu@gmail.com>\n"
 "Language-Team: Finnish <lokalisointi@lists.coss.fi>\n"
 "Language: fi\n"
@@ -18,33 +18,31 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.5\n"
 
-#: package/contents/ui/Battery.qml:34
-msgid "Charging, %1"
-msgstr ""
+#: package/contents/ui/Battery.qml:36
+#, fuzzy
+#| msgid "Charging, %1"
+msgid "Charging: %1%"
+msgstr "Latautuu, %1"
 
-#: package/contents/ui/Battery.qml:34
-msgid "Discharging, %1"
-msgstr ""
+#: package/contents/ui/Battery.qml:36
+#, fuzzy
+#| msgid "Discharging, %1"
+msgid "Discharging: %1%"
+msgstr "Purkautuu, %1"
 
-#: package/contents/ui/Battery.qml:34
+#: package/contents/ui/Battery.qml:36
 msgid "No info"
-msgstr ""
+msgstr "Ei tietoja"
 
 #: package/contents/ui/CompactRepresentation.qml:48
 msgid "KDE Connect device notifications"
-msgstr ""
+msgstr "KDE Connect -laiteilmoitukset"
 
-#: package/contents/ui/DeviceDelegate.qml:53
-#: package/contents/ui/DeviceDelegate.qml:59
-#: package/contents/ui/DeviceDelegate.qml:64
-msgid "Browse"
-msgstr ""
-
-#: package/contents/ui/DeviceDelegate.qml:107
+#: package/contents/ui/DeviceDelegate.qml:77
 msgid "Battery"
 msgstr "Akku"
 
-#: package/contents/ui/DeviceDelegate.qml:122
+#: package/contents/ui/DeviceDelegate.qml:92
 msgid "Notifications"
 msgstr "Ilmoitukset"
 
