--- a/po/fr/kdeconnect-kcm.po
+++ b/po/fr/kdeconnect-kcm.po
@@ -1,15 +1,16 @@
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
 # Joëlle Cornavin <jcorn@free.fr>, 2013.
+# Nicolas Ménard <nico.menard@gmail.com>, 2014.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2014-02-15 01:46+0000\n"
-"PO-Revision-Date: 2013-09-17 10:17+0200\n"
-"Last-Translator: Joëlle Cornavin <jcorn@free.fr>\n"
-"Language-Team: French <kde-francophone@kde.org>\n"
+"PO-Revision-Date: 2014-02-17 11:20+0100\n"
+"Last-Translator: Nicolas Ménard <nico.menard@gmail.com>\n"
+"Language-Team: French <kde-i18n-doc@kde.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,9 +61,9 @@ msgstr "Désapparier"
 #. i18n: ectx: property (text), widget (QPushButton, ping_button)
 #: kcm.ui:168
 msgid "Send ping"
-msgstr "Envoyer une commande « ping »"
+msgstr "Envoyer une commande « ping »"
 
 #. i18n: ectx: property (text), widget (QPushButton, browse_button)
 #: kcm.ui:175
 msgid "Browse"
-msgstr ""
+msgstr "Visualiser"
