--- a/po/fr/plasma_applet_kdeconnect.po
+++ b/po/fr/plasma_applet_kdeconnect.po
@@ -2,15 +2,16 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Joëlle Cornavin <jcorn@free.fr>, 2013.
 # Vincent PINON <vincent.pinon@st.com>, 2013.
+# Nicolas Ménard <nico.menard@gmail.com>, 2014.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2014-02-17 02:14+0000\n"
-"PO-Revision-Date: 2013-12-09 12:49+0100\n"
-"Last-Translator: Vincent PINON <vincent.pinon@st.com>\n"
-"Language-Team: French <kde-francophone@kde.org>\n"
+"POT-Creation-Date: 2014-03-01 01:46+0000\n"
+"PO-Revision-Date: 2014-02-24 12:04+0100\n"
+"Last-Translator: Nicolas Ménard <nico.menard@gmail.com>\n"
+"Language-Team: French <kde-i18n-doc@kde.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,33 +22,27 @@ msgstr ""
 "X-Accelerator-Marker: &\n"
 "X-Text-Markup: kde4\n"
 
-#: package/contents/ui/Battery.qml:34
-msgid "Charging, %1"
+#: package/contents/ui/Battery.qml:36
+msgid "Charging: %1%"
 msgstr ""
 
-#: package/contents/ui/Battery.qml:34
-msgid "Discharging, %1"
+#: package/contents/ui/Battery.qml:36
+msgid "Discharging: %1%"
 msgstr ""
 
-#: package/contents/ui/Battery.qml:34
+#: package/contents/ui/Battery.qml:36
 msgid "No info"
-msgstr ""
+msgstr "Pas d'information"
 
 #: package/contents/ui/CompactRepresentation.qml:48
 msgid "KDE Connect device notifications"
-msgstr ""
+msgstr "Notifications de périphérique KDE Connect"
 
-#: package/contents/ui/DeviceDelegate.qml:53
-#: package/contents/ui/DeviceDelegate.qml:59
-#: package/contents/ui/DeviceDelegate.qml:64
-msgid "Browse"
-msgstr ""
-
-#: package/contents/ui/DeviceDelegate.qml:107
+#: package/contents/ui/DeviceDelegate.qml:77
 msgid "Battery"
 msgstr "Batterie"
 
-#: package/contents/ui/DeviceDelegate.qml:122
+#: package/contents/ui/DeviceDelegate.qml:92
 msgid "Notifications"
 msgstr "Notifications"
 
