--- a/po/lt/kdeconnect-kcm.po
+++ b/po/lt/kdeconnect-kcm.po
@@ -1,66 +1,63 @@
 # Lithuanian translations for l package.
 # Copyright (C) 2014 This_file_is_part_of_KDE
 # This file is distributed under the same license as the l package.
-# Automatically generated, 2014.
 #
+# Automatically generated, 2014.
+# Liudas Ališauskas <liudas@aksioma.lt>, 2014.
 msgid ""
 msgstr ""
 "Project-Id-Version: l 10n\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2014-02-15 01:46+0000\n"
-"PO-Revision-Date: 2013-11-07 01:41+0000\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
-"Language: \n"
+"POT-Creation-Date: 2014-04-06 02:05+0000\n"
+"PO-Revision-Date: 2014-03-15 02:50+0200\n"
+"Last-Translator: Liudas Ališauskas <liudas@aksioma.lt>\n"
+"Language-Team: Lithuanian <kde-i18n-lt@kde.org>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
 "%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
+"X-Generator: Lokalize 1.5\n"
 
-#: kcm.cpp:145 kcm.cpp:229
+#: kcm.cpp:143 kcm.cpp:227
 msgid "(paired)"
-msgstr ""
+msgstr "(suporuotas)"
 
-#: kcm.cpp:145 kcm.cpp:201 kcm.cpp:212
+#: kcm.cpp:143 kcm.cpp:199 kcm.cpp:210
 msgid "(unpaired)"
-msgstr ""
+msgstr "(nesuporuotas)"
 
-#: kcm.cpp:159
+#: kcm.cpp:157
 msgid "Plugins"
-msgstr ""
+msgstr "Įskiepiai"
 
-#: kcm.cpp:214
+#: kcm.cpp:212
 #, kde-format
 msgid "Error trying to pair: %1"
-msgstr ""
+msgstr "Klaida bandant suporuoti: %1"
 
 #. i18n: ectx: property (text), widget (QLabel, name_label)
 #: kcm.ui:84
 msgid "Device"
-msgstr ""
+msgstr "Įrenginys"
 
 #. i18n: ectx: property (text), widget (QLabel, status_label)
 #: kcm.ui:97
 msgid "(status)"
-msgstr ""
+msgstr "(būsena)"
 
 #. i18n: ectx: property (text), widget (QPushButton, pair_button)
 #: kcm.ui:142
 msgid "Request pair"
-msgstr ""
+msgstr "Užklausti poros"
 
 #. i18n: ectx: property (text), widget (QPushButton, unpair_button)
 #: kcm.ui:155
 msgid "Unpair"
-msgstr ""
+msgstr "Atrišti"
 
 #. i18n: ectx: property (text), widget (QPushButton, ping_button)
 #: kcm.ui:168
 msgid "Send ping"
-msgstr ""
-
-#. i18n: ectx: property (text), widget (QPushButton, browse_button)
-#: kcm.ui:175
-msgid "Browse"
-msgstr ""
+msgstr "Siųsti ping"
